[project]
name = "tools"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = []
description = "Tools package for python3"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["tools"]
classifiers = [
  "Programming Language :: Python"
]
authors = [
    { name = "grandatlant", email = "grandatlant@gmail.com" }
]

[project.urls]
Repository = "https://github.com/grandatlant/tools-lib.git"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

